--- a/vim/.vim/templates/page.html
+++ b/vim/.vim/templates/page.html
@@ -6,7 +6,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title>Hello, world!</title>
+    <title>Title</title>
   </head>
   <body>
   </body>
